# Bar-Chart-Race

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
config/: BarChartConfig.h.in  BarRaceConfig.h.in  config.example.ini
doc/: README.md  author.md
src/: main.cpp
src/classes/: Bar.cpp  Bar.hpp  BarChart.cpp  BarChart.hpp  Database.cpp  Database.hpp  GameController.cpp  GameController.hpp
src/functions/clioptions/: clioptions.cpp  clioptions.hpp
src/functions/utils/: utils.hpp
src/libs/fileini/: fileini.cpp  fileini.hpp
src/libs/format/: fstring.cpp  fstring.hpp
src/libs/searching/: searching.hpp
